--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ start: 2018-04-07
 end: 2018-04-09
 published: 2018-04-09
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 location: Lanzarote, Spain
 layout: proceedings
 series: Proceedings of Machine Learning Research
