--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,10 @@ baseurl: "/v83"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+style: pmlr
 plugins:
+- jekyll-feed
+- jekyll-seo-tag
 - jekyll-remote-theme
 remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
