--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
 booktitle: Proceedings of Algorithmic Learning Theory
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 shortname: ALT
 volume: 83
 year: '2018'
@@ -43,6 +44,10 @@ baseurl: "/v83"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -71,6 +76,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
