--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ year: '2018'
 start: 2018-04-07
 end: 2018-04-09
 published: 2018-04-09
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 location: Lanzarote, Spain
